Add Docker support and setup for Laravel application

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,5 @@ services:
       dockerfile: "docker/Dockerfile"
     ports:
       - "8000:8000"
-    volumes:
-      - .:/app
+#    volumes:
+#      - .:/app
